--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "audiobuffer-to-wav": "^1.0.0",
+    "file-saver": "^2.0.5",
     "firebase": "^9.15.0",
     "mic-recorder-to-mp3": "^2.2.2",
     "react": "^18.2.0",
@@ -41,5 +42,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "browser":{
+    "child_process": false
+    }  
+  
 }
